--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="#home">• Home</a>
-                <a href="#course"><br>• Course</a>
+                <a href="#course">• Course</a>
                 <a href="#curriculum">• Curriculum</a>
-                <a href="#enroll"><br>• Enroll</a>
+                <a href="#enroll">• Enroll</a>
             </div>
             <div class="copyright">© 2026 P. Clement Tutoring. All rights reserved.</div>
         </div>
